[package]
name = "onion-vanity"
version = "0.1.0"
authors = ["Aurèle Oulès <aurele@oules.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.0"
ed25519-dalek = { git = "https://github.com/aureleoules/ed25519-dalek" }
sha3 = "0.9.1"
data-encoding = "2.3.2"
hex = "0.4.3"
clap = "3.0.0-beta.2"
log = "*"
env_logger = "*"
ctrlc = { version = "3.0", features = ["termination"] }